2022-02-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/12f1571_g.lkr,
    lkr/12lf1571_g.lkr,
    libgputils/gpprocessor.c:
    Rejected this bug report: "#316 incorrect linear_ram_addrs"
    The relevant page of the datasheet contains misleading information.

2022-02-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/12f1571_g.lkr,
    lkr/12lf1571_g.lkr,
    libgputils/gpprocessor.c:
    Fixed bug: "#316 incorrect linear_ram_addrs"
    Thanks to Ben Tesch.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * man/gplink.1.in:
    Updated the command line options.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Updated the documentation.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am,
    header/Makefile.in,
    header/p16f184...inc,
    header/p16lf184...inc,
    libgputils/gpcfg.h,
    libgputils/gpcfg-table.c,
    libgputils/gpprocessor.c,
    libgputils/gpregister.h,
    libgputils/gpreg-table.c,
    lkr/16f184.._g.lkr,
    lkr/16lf184.._g.lkr,
    lkr/Makefile.am,
    lkr/Makefile.in:
    Added patch: "#77 Add PIC16F184XX devices"
    Thanks to Schelte Bron.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/parse.y:
    Added patch: "#76 Parser doesn't allow more than one unary operator"
    Thanks to Schelte Bron.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpasm/util.c:
    Added patch: "#75 Prevent globals/externals from being created in .idlocs coff section"
    Thanks to Robert Nee.

2022-01-29  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c,
    gpasm/gpasm.h.in,
    gplink/gplink.c,
    gplink/gplink.h.in,
    gplink/map.c,
    gputils/gpstrip.c,
    libgputils/gpcofflink.c,
    libgputils/gpcoffopt.c,
    libgputils/gpcoffopt.h,
    libgputils/gpwriteobj.c,
    libgputils/gpwriteobj.h: